# fred

./: .env.local.example  .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  flake.nix  prek.toml  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml  publish.yml  update-flake-lock.yml
.helix/: languages.toml
nix/: prek-toml.nix
nix/code-quality-tools/: nix.nix  prek.nix  python.nix  uv.nix
scripts/: release.sh
src/builders/v1/: README.md  request.py
src/fred/: __init__.py
src/fred/enums/: __init__.py  aggregation_method.py  endpoint.py  filter_value.py  filter_variable.py  frequency.py  order_by.py  output_type.py  search_type.py  seasonal_adjustment.py  seasonal_adjustment_short.py  shape.py  tag_group_id.py  units.py
src/fred/functions/: first_day_of_year_st_louis.py  for_request.py  today_st_louis.py
src/fred/request/: README.md  __init__.py
src/fred/response/: __init__.py  realtime.py  source.py
src/fred/types/: __init__.py  api_key.py  category.py  category_id.py  category_reponse.py  category_request_params.py  fred_timestamp.py  last_updated.py  limit.py  offset.py  realtime.py  release_id.py  series_id.py  source_id.py
src/fred/v1/: README.md  api_key.py  order_by.py  sort_order.py
src/interface/: v0.py
src/interfaces/: v0.py
src/request/: __init__.py  main.py
src/request/endpoint/: main.py
src/request/implementation/: file_type.py  request.py  request_builder.py
src/request/interface/: builder.py  request.py
tests/: conftest.py
tests/enum_test/: frequency_test.py  search_type_test.py  tag_group_id_test.py
tests/fred_test/enums_test/: aggregation_method_test.py  file_type_test.py  filter_value_test.py  filter_variable_test.py  order_by_test.py  output_type_test.py  seasonal_adjustment_short_test.py  seasonal_adjustment_test.py  shape_test.py  sort_order_test.py  tag_group_id_test.py  units_test.py
tests/fred_test/functions_test/: for_request_test.py  today_st_louis_test.py
tests/fred_test/types_test/: api_key_test.py  category_id_test.py  category_request_params_test.py  category_response_test.py  category_test.py  fred_timestamp_test.py  last_updated_test.py  limit_test.py  offset_test.py  realtime_test.py
tests/fred_test/v1_test/: api_key_test.py  file_type_test.py  order_by_test.py  realtime_test.py  sort_order_test.py
tests/integration_test/: category_children_test.py  category_related_tags_test.py  category_related_test.py  category_series_test.py  category_tags_test.py  category_test.py  conftest.py  geofred_regional_data_test.py  geofred_series_data_test.py  geofred_series_group_test.py  geofred_shapes_test.py  release_dates_test.py  release_related_tags_test.py  release_series_test.py  release_sources_test.py  release_tables_test.py  release_tags_test.py  release_test.py  releases_dates_test.py  releases_test.py  series_categories_test.py  series_observations_test.py  series_release_test.py  series_search_related_tags_test.py  series_search_tags_test.py  series_search_test.py  series_tags_test.py  series_test.py  series_updates_test.py  series_vintagedates_test.py  source_releases_test.py  source_test.py  sources_test.py  tags_related_test.py  tags_series_test.py  tags_test.py
tests/request_test/: main_test.py
tests/request_test/endpoint_test/: main_test.py
tests/request_test/enum_test/: endpoint_test.py
tests/request_test/implementation_test/: api_key_test.py  file_type_test.py  (+4 more)
tests/response_test/: realtime_test.py  source_test.py
tofu/: .terraform.lock.hcl  README.md  main.tf  providers.tf  terraform.tfvars  variables.tf  versions.tf
(+234 files in other folders)
