[project]
name = "fred-stl"
version = "0.1.0"
description = "A Python library for the FRED API (Federal Reserve Bank of St. Louis)"
readme = "README.md"
authors = [{ name = "Otto Hermann", email = "ojhermann@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.12.5"]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ojhermann-org/fred"
Repository = "https://github.com/ojhermann-org/fred"
Issues = "https://github.com/ojhermann-org/fred/issues"

[build-system]
requires = ["uv_build>=0.10.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "jedi-language-server>=0.46.0",
  "pytest>=9.0.2",
  "python-lsp-server>=1.14.0",
  "ruff>=0.15.7",
  "ty>=0.0.24",
]

[tool.pytest]
addopts = ["--strict-markers"]
markers = [
  "contract_test: tests that something adheres to a contract",
  "integration_test: tests against the live FRED API; requires FRED_API_KEY to be set",
  "unit_test: tests a specific and discrete element for correctness",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["ANN", "F", "I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "fred"
